--- a/data/theme.yaml
+++ b/data/theme.yaml
@@ -1,7 +1,7 @@
 light:
   color-background-soft: '#F3F4F6'   # gray-100
   color-background: '#fff'           # white
-  color-background-inverse: '#000'   # black
+  color-background-inverse: '#111827' # gray-900
 
   color-hljs: '#FFFFFFFF'             # color taken from the Highlight.js theme
   color-hljs-transparent: '#FFFFFF00' # color taken from the Highlight.js theme, transparent
@@ -26,8 +26,8 @@ light:
   rounded-btn: '0.25rem'
 
 dark:
-  color-background-soft: '#111827'   # gray-900
-  color-background: '#000'           # black
+  color-background-soft: '#1F2937'   # gray-800
+  color-background: '#111827'        # gray-900
   color-background-inverse: '#fff'   # white
 
   color-hljs: '#1E1E1EFF'             # color taken from the Highlight.js theme
