config changes for test content

--- a/exampleSite/config/_default/config.yaml
+++ b/exampleSite/config/_default/config.yaml
@@ -50,7 +50,7 @@ services:
     disableInlineCSS: true
     
 enableEmoji: true
-enableGitInfo: false
+enableGitInfo: true
 googleAnalytics: ''
 
 markup:
