--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,13 @@
 [build]
-command = "hugo -e production -s exampleSite -t hugo-plc-docs-theme --themesDir=../.. --minify --gc --baseURL $URL"
+publish = "exampleSite/public"
+command = "cd exampleSite && hugo --themesDir ../.."
 
 [build.environment]
 HUGO_VERSION = "0.81.0"
+HUGO_THEME = "repo"
+HUGO_BASEURL = "https://example.netlify.app"
+
+[[headers]]
+for = "/*"
+[headers.values]
+Access-Control-Allow-Origin = "*"
