--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@ command = "cd exampleSite && hugo --themesDir ../.."
 [build.environment]
 HUGO_VERSION = "0.81.0"
 HUGO_THEME = "repo"
-HUGO_BASEURL = "https://example.netlify.app"
+HUGO_BASEURL = "https://plc-docs-theme.netlify.app"
 
 [[headers]]
 for = "/*"
