--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,10 @@
 [build]
 publish = "public"
-command = "hugo --themesDir=../.. -s exampleSite -t hugo-plc-docs-theme --minify --gc --enableGitInfo"
+command = "hugo --themesDir=../.. -s exampleSite -t repo --minify --gc --enableGitInfo"
 
 [build.environment]
 HUGO_VERSION = "0.81.0"
 HUGO_ENV = "production"
-HUGO_ENABLEGITINFO = "true"
 HUGO_BASEURL = "https://plc-docs-theme.netlify.app"
 
 
