publish folder changed

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-publish = "public"
-command = "hugo --themesDir=../.. -s exampleSite -t repo --minify --gc --enableGitInfo"
+publish = "exampleSite/public"
+command = "hugo -s exampleSite --themesDir=../.. -t repo --minify --gc --enableGitInfo"
 
 [build.environment]
 HUGO_VERSION = "0.81.0"
