--- a/exampleSite/config/_default/params.yaml
+++ b/exampleSite/config/_default/params.yaml
@@ -1,5 +1,8 @@
-
-# debug: true
+# theme:
+#   light:
+#     color-background: '#f88'
+#   dark:
+#     color-background: '#88f'
 
 # Plugins specified as `optional` (see `data/plugins.yaml`) can be activated
 # here site wise (will be loaded for every page).
@@ -7,52 +10,6 @@
 plugins:
 #   - mermaid
 #   - fullcalendar
-
-# imported_sections:
-#   YaskawaMLx:
-#     # repo: "<the URL of the repository>"
-#     branches:
-#       - "1.25.0"
-#       - "1.24.0"
-#       - "master"
-#       # - "1.22.1"
-#   Libraries:
-#     # repo: "<the URL of the repository>"
-#     branches:
-#       - "1.24.0"
-#       - "1.23.1"
-#       - "1.23.0"
-#       - "1.22.0"
-#   Folder:
-#     # repo: "<the URL of the repository>"
-#     branches:
-#       - "0.4.0"
-#       - "0.3.4"
-#       - "0.3.3"
-#       - "0.3.2"
-#       - "0.3.1"
-#       - "0.3.0"
-#       - "0.2.0"
-#       - "0.1.2"
-#       - "0.1.1"
-#       - "0.1.0"
-#   Versioned Page:
-#     # repo: "<the URL of the repository>"
-#     branches:
-#       - "0.2.0"
-#       - "0.1.1"
-#       - "0.1.0"
-#   Example one:
-#     # repo: "<the URL of the repository>"
-#     branches:
-#       - "0.2.0"
-#       - "0.1.1"
-#       - "0.1.0"
-#   Example two:
-#     # repo: "<the URL of the repository>"
-#     branches:
-#       - "0.1.1"
-#       - "0.1.0"
 
 navBar:
   # kind of logo [ false / inline (default) / <logo file name> ]
@@ -63,218 +20,3 @@ navBar:
   
   # kind of text [ false / title (default) / <some custom text> ]
   text: title
-
-
-
-
-
-################################################################################
-
-# description: The Zzo theme for Hugo example site.
-# custom_css: []
-# custom_js: []
-# useFaviconGenerator: true
-# meta_image: ''
-# themecolor: ''
-# themeOptions:
-  # - dark
-  # - light
-  # - hacker
-  # - solarized
-  # - kimbie
-# notAllowedTypesInHome:
-#   - contact
-#   - talks
-#   - about
-#   - showcase
-#   - publication
-#   - presentation
-#   - resume
-# notAllowedTypesInHomeSidebar:
-#   - about
-#   - archive
-#   - showcase
-#   - publication
-#   - presentation
-#   - resume
-# notAllowedTypesInArchive:
-#   - about
-#   - talks
-#   - showcase
-#   - publication
-#   - presentation
-#   - resume
-# notAllowedTypesInHomeFeed:
-#   - about
-#   - archive
-#   - contact
-#   - talks
-#   - showcase
-#   - publication
-#   - presentation
-#   - resume
-#   - gallery
-# viewportSize: normal
-# enableUiAnimation: true
-# hideSingleContentsWhenJSDisabled: false
-# enablePinnedPosts: true
-# minItemsToShowInTagCloud: 1
-# enableAppbarSearchIcon: false
-# enableAppbarLangIcon: false
-# homeHeaderType: text
-# hideHomeHeaderWhenMobile: false
-# showMobileMenuTerms:
-#   - tags
-#   - categories
-#   - series
-# enableBreadcrumb: true
-# enablePhotoSwipe: true
-# enableSearch: true
-# enableSearchHighlight: true
-# enableGoToTop: true
-# enableWhoami: true
-# summaryShape: classic
-# searchResultPosition: main
-# archiveGroupByDate: '2006'
-# archivePaginate: 13
-# paginateWindow: 1
-# talksPaginate: 5
-# talksGroupByDate: '2006'
-# pubPaginate: 20
-# writtenTimeIcon: "\U0001F4C5"
-# modifiedTimeIcon: "\U0001F4DD"
-# readingTimeIcon: ☕
-# authorIcon: ✍️
-# pagePvIcon: "\U0001F440"
-# pinIcon: "\U0001F4CC"
-# tagIcon: "\U0001F3F7️"
-# publicationIcon: "\U0001F4DA"
-# typeIcon: "\U0001F3AF"
-# myname: zzossig
-# email: zzossig@gmail.com
-# whoami: Web Developer
-# bioImageUrl: ''
-# useGravatar: false
-# location: 'Seoul, Korea'
-# organization: Hugo
-# link: 'https://zzossig.io/ko'
-# enableBio: true
-# enableBioImage: true
-# enableSidebar: true
-# enableSidebarTags: true
-# enableSidebarSeries: true
-# enableSidebarCategories: true
-# enableHomeSidebarTitles: true
-# enableListSidebarTitles: true
-# enableToc: true
-# hideToc: false
-# tocFolding: true
-# tocPosition: inner
-# enableTocSwitch: true
-# itemsPerCategory: 5
-# sidebarPosition: right
-# tocLevels:
-#   - h2
-#   - h3
-#   - h4
-# enableSidebarPostsByOrder: false
-# showPoweredBy: true
-# showFeedLinks: true
-# showSocialLinks: true
-# enableLangChange: true
-# enableThemeChange: true
-# googleTagManager: ''
-# baiduAnalytics: ''
-# enableBusuanzi: false
-# busuanziSiteUV: true
-# busuanziSitePV: true
-# busuanziPagePV: true
-# updatePeriod: ''
-# updateFrequency: ''
-# fullContents: false
-# enableComment: true
-# disqus_shortname: ''
-# commento: false
-# telegram:
-#   enable: false
-#   siteId: ''
-#   dataLimit: 5
-# gitment:
-#   owner: ''
-#   repo: ''
-#   clientId: ''
-#   clientSecret: ''
-# utterances:
-#   owner: ''
-#   repo: ''
-# gitalk:
-#   owner: ''
-#   repo: ''
-#   clientId: ''
-#   clientSecret: ''
-# valine:
-#   enable: false
-#   appId: 你的appId
-#   appKey: 你的appKey
-#   notify: false
-#   verify: false
-#   avatar: mm
-#   placeholder: 说点什么吧...
-#   visitor: false
-# changyan:
-#   changyanAppid: ''
-#   changyanAppkey: ''
-# livere:
-#   livereUID: ''
-# isso:
-#   enable: false
-#   scriptSrc: ''
-#   dataAttrs: ''
-# socialOptions:
-#   email: 'mailto:your@email.com'
-#   phone: ''
-#   facebook: 'http://example.org/'
-#   twitter: 'http://example.org/'
-#   github: 'https://github.com/zzossig/hugo-theme-zzo'
-#   stack-overflow: ''
-#   instagram: ''
-#   google-plus: ''
-#   youtube: ''
-#   medium: ''
-#   tumblr: ''
-#   linkedin: ''
-#   pinterest: ''
-#   stack-exchange: ''
-#   telegram: ''
-#   steam: ''
-#   weibo: ''
-#   douban: ''
-#   csdn: ''
-#   gitlab: ''
-#   mastodon: ''
-#   jianshu: ''
-#   zhihu: ''
-#   signal: ''
-#   whatsapp: ''
-#   matrix: ''
-#   xmpp: ''
-#   dev-to: ''
-#   gitea: ''
-#   google-scholar: ''
-# donationOptions:
-#   enable: false
-#   alipay: ''
-#   wechat: ''
-#   paypal: ''
-#   patreon: ''
-# share:
-#   - name: facebook
-#     username: ''
-#   - name: twitter
-# footerLinks:
-#   - name: ''
-#     link: ''
-#   - name: ''
-#     link: ''
-
-
